--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.ask42</groupId>
-    <artifactId>10001_javaautotest_ask42</artifactId>
+    <groupId>en.ru.stqa.litecart</groupId>
+    <artifactId>Belhard_Selenium</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
