--- a/configs/config-dev.properties
+++ b/configs/config-dev.properties
@@ -1,6 +1,7 @@
+baseUrl=https://litecart.stqa.ru/en/
+domain=litecart.stqa.ru
 cookiesName=LCSESSID
 cookiesValue=44a0n0ikai7pgdi7ktlmlql1j6
-domain=litecart.stqa.ru
 headless=false
 remote=false
 devLogin=sergei.moroz94test@gmail.com
