--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <env>dev</env>
         <ip>192.168.100.5</ip>
         <browser>chrome</browser>
-        <browser>firefox</browser>
+<!--        <browser>firefox</browser>-->
     </properties>
 
     <dependencies>
@@ -146,6 +146,8 @@
                 <configuration>
                     <!--suppress UnresolvedMavenProperty -->
                     <argLine>
+                        -Dcucumber.filter.tags="@SomeTag1 or @SomeTag2 or @SomeTag3 or @SomeTag4"
+                        -Dcucumber.filter.tags=@changeRegion
                         -Dip=${ip}
                         -Denv=${env}
                         -Dbrowser=${browser}
