--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <env>dev</env>
         <ip>192.168.100.5</ip>
         <browser>chrome</browser>
-<!--        <browser>firefox</browser>-->
+        <browser>firefox</browser>
     </properties>
 
     <dependencies>
